FullQa New/src/objects/Strategic_Tax_Content_Survey__c.object
<CustomObject>
    <description>Purpose: To have RSM answer a survey if they mark this as a Strategic Tax Content Opportunity
Integrated: Yes, populated by Click tools survey 
Change: Level 1 
Custodian: Mark Giddens</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connectors_Needed__c</fullName>
        <label>Connectors Needed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Description__c</fullName>
        <label>Content Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Content_Due_Date__c</fullName>
        <label>Content Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Countries_Needed__c</fullName>
        <label>Countries Needed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Description__c</fullName>
        <label>Customer Business Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Locals_Needed__c</fullName>
        <label>Locals Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Approximate__c</fullName>
        <label>Opportunity Amount Approximate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date_Approximate__c</fullName>
        <label>Opportunity Close Date Approximate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <formula>Opportunity__r.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Purpose: 
Integrated: Populated by Click tools Survey
Change: Level 1 
Custodian: Marketing</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Stategic Tax Content Surveys</relationshipLabel>
        <relationshipName>Stategic_Tax_Content_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Projected_Go_Live_Date__c</fullName>
        <label>Projected Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Region_of_Local_presense__c</fullName>
        <label>State/Region of Local presense</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Reasons__c</fullName>
        <description>Populated via Clicktool Survey Question: Why is this Opportunity Strategic?</description>
        <label>Strategic Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Advantage</fullName>
                </value>
                <value>
                    <fullName>Deal Size</fullName>
                </value>
                <value>
                    <fullName>New Connector/Channel</fullName>
                </value>
                <value>
                    <fullName>Reference Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Strategic Tax Content Survey</label>
    <nameField>
        <label>Strategic Tax Content Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stategic Tax Content Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>